[package]
name = "advent_of_code_2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.1.0"
itertools = "0.13.0"
num_cpus = "1.16.0"
once_cell = "1.20.2"
regex = "1.11.1"
z3 = "0.12.1"
z3-sys = { version = "0.8.1", features = ["static-link-z3"] }
